Crash when attempting multires linear subdivide #95666

Closed
opened 2022-02-10 11:16:20 +01:00 by Brandon Lockaby · 8 comments

System Information
Operating system: Linux-5.8.0-63-lowlatency-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Seems broken since its introduction in 134619fabb.

Exact steps for others to reproduce the error
Click 'Linear' twice on the multires modifier.
chest.crash.txt

chest.blend

Note: this is not crashing if doubles are removed first (Merge By Distance)

**System Information** Operating system: Linux-5.8.0-63-lowlatency-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Seems broken since its introduction in 134619fabb. **Exact steps for others to reproduce the error** Click 'Linear' twice on the multires modifier. [chest.crash.txt](https://archive.blender.org/developer/F12860330/chest.crash.txt) [chest.blend](https://archive.blender.org/developer/F12860331/chest.blend) Note: this is not crashing if doubles are removed first (Merge By Distance)

Added subscriber: @brandonglockaby

Added subscriber: @brandonglockaby
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, will check

Confirmed, will check
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

reshape_subdiv->evaluator is NULL

1  reshape_subdiv_refine                            multires_reshape_smooth.c 1115  0x3ca0a28 
2  reshape_subdiv_refine_final                      multires_reshape_smooth.c 1185  0x3ca0c0f 
3  multires_reshape_smooth_object_grids             multires_reshape_smooth.c 1540  0x3ca16a0 
4  multiresModifier_subdivide_to_level              multires_reshape.c        238   0x3c9d29e 
5  multiresModifier_subdivide                       multires_reshape.c        175   0x3c9d0b6 
6  multires_subdivide_exec                          object_modifier.c         1928  0x5394b6b 
7  wm_operator_invoke                               wm_event_system.c         1351  0x4306f33 
8  wm_operator_call_internal                        wm_event_system.c         1580  0x43076d3 
9  WM_operator_name_call_ptr                        wm_event_system.c         1593  0x430776f 
10 WM_operator_name_call_ptr_with_depends_on_cursor wm_event_system.c         1781  0x4307cf3 
11 ui_apply_but_funcs_after                         interface_handlers.c      1024  0x557c885 
12 ui_handler_region_menu                           interface_handlers.c      11399 0x559916c 
13 wm_handler_ui_call                               wm_event_system.c         714   0x43054be 
14 wm_handlers_do_intern                            wm_event_system.c         3041  0x430b3c8 
15 wm_handlers_do                                   wm_event_system.c         3161  0x430b97c 
16 wm_event_do_handlers                             wm_event_system.c         3691  0x430d131 
17 WM_main                                          wm.c                      639   0x42ff0de 
18 main                                             creator.c                 560   0x3bb9f0f 

Seems broken since its introduction in 134619fabb.
Maybe @Sergey can take a look

`reshape_subdiv`->`evaluator` is NULL ``` 1 reshape_subdiv_refine multires_reshape_smooth.c 1115 0x3ca0a28 2 reshape_subdiv_refine_final multires_reshape_smooth.c 1185 0x3ca0c0f 3 multires_reshape_smooth_object_grids multires_reshape_smooth.c 1540 0x3ca16a0 4 multiresModifier_subdivide_to_level multires_reshape.c 238 0x3c9d29e 5 multiresModifier_subdivide multires_reshape.c 175 0x3c9d0b6 6 multires_subdivide_exec object_modifier.c 1928 0x5394b6b 7 wm_operator_invoke wm_event_system.c 1351 0x4306f33 8 wm_operator_call_internal wm_event_system.c 1580 0x43076d3 9 WM_operator_name_call_ptr wm_event_system.c 1593 0x430776f 10 WM_operator_name_call_ptr_with_depends_on_cursor wm_event_system.c 1781 0x4307cf3 11 ui_apply_but_funcs_after interface_handlers.c 1024 0x557c885 12 ui_handler_region_menu interface_handlers.c 11399 0x559916c 13 wm_handler_ui_call wm_event_system.c 714 0x43054be 14 wm_handlers_do_intern wm_event_system.c 3041 0x430b3c8 15 wm_handlers_do wm_event_system.c 3161 0x430b97c 16 wm_event_do_handlers wm_event_system.c 3691 0x430d131 17 WM_main wm.c 639 0x42ff0de 18 main creator.c 560 0x3bb9f0f ``` Seems broken since its introduction in 134619fabb. Maybe @Sergey can take a look
Sergey Sharybin self-assigned this 2022-02-10 15:29:37 +01:00

This issue was referenced by 94f0230230

This issue was referenced by 94f023023035492da824fb1f4df1067e1e1237f1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95666
No description provided.